Added documentation for taskParallel.chpl example
Added taskParallel to the examples Makefile, README, and
README.features files.

Also, added a varargs column to the program structure
table and gave David's program a star in this column.
Also added enum to the types table and checked off both
Sam's program and Mary Beth's norm test.




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13827 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -27,6 +27,7 @@ demonstrate various Chapel features:
      reductions.chpl        : applies several array reductions on a 2D array
      slices.chpl            : examples of array slicing and reindexing
      sparse.chpl            : sparse domain/array tutorial example
+     taskParallel.chpl      : introduces task parallel language concepts
      tree.chpl              : constructs and walks a tree in parallel
      varargs.chpl           : demonstration of variable argument functions
 
