--- a/CHANGES
+++ b/CHANGES
@@ -19,26 +19,26 @@ Changes to Chapel Language:
 ---------------------------
 - added "new" keyword to invoke class/record constructors
   e.g., "class C { ... }  var myC = C(...);" => "... var myC = new C(...);"
-- added support for functions with type varargs
-  e.g., def foo(type t ...?numTypes) { ... }
-- added support for vararg read()/readln() functions that return a tuple value
-  e.g., "read(int, float, string);" returns an (int, float, string) value
 - enumerated types now require the type to be named before a component symbol
   e.g., "enum myEnum {A, B, C}; var x = B;" => "... var x = myEnum.B;"
 - changed a file's mode from a string to an enumeration
   e.g., file(..., "r") => file(..., FileAccessMode.read)
 - added "sync" statement to join dynamic parallelism
   e.g., sync { /* create parallelism */ }  // waits here for parallelism to end
-- removed the "of" keyword
-- removed the "ordered" keyword and concept
+- added "here" constant to refer to the locale on which a task is executing
+- added support for readXX and isFull on single variables
+- added support for functions with type varargs
+  e.g., def foo(type t ...?numTypes) { ... }
+- added support for vararg read()/readln() functions that return a tuple value
+  e.g., "read(int, float, string);" returns an (int, float, string) value
+- added a sorted() iterator to associative domains/arrays and opaque arrays
+  e.g., var table: domain(string); ...  for entry in table.sorted() do ...
 - added support for a compilerWarning() call similar to compilerError()
   e.g., compilerWarning("I didn't expect this function to be called");
 - added string relational operators
   e.g., ..."hi" >= "bye"...
-- added a sorted() iterator to associative domains/arrays and opaque arrays
-  e.g., var table: domain(string); ...  for entry in table.sorted() do ...
-- added support for readXX and isFull on single variables
-- added "here" constant to refer to the locale on which a task is executing
+- removed the "of" keyword
+- removed the "ordered" keyword and concept
 
 Newly Implemented Features:
 ---------------------------
@@ -49,11 +49,11 @@ Newly Implemented Features:
   e.g., "var x = ...;  ... x.locale ..."
 - task pool to support the creation of more tasks than executing threads
   (see doc/README.threads for more details)
-- removed support for real(128), imag(128), complex(256) for the time being
-- strengthened distinction between type specifiers and constructor calls
-- enumerated and opaque arrays now support iteration
 - added support for calling methods within class constructors
 - improved support for member initializer expressions within classes
+- strengthened distinction between type specifiers and constructor calls
+- temporarily removed support for real(128), imag(128), complex(256)
+- enumerated and opaque arrays now support iteration
 - added support for tuples of sync variables
 - added support for declaring enumerations within classes
 
@@ -63,8 +63,8 @@ Portability of code base:
 
 Semantic Changes:
 -----------------
-- Chapel now parses types in the same way that it parses general expressions
 - in a type context, (int) is no longer a 1-tuple of type int; use 1*int instead
+- Chapel now parses types in the same way that it parses general expressions
 
 Syntactic/Naming Changes:
 -------------------------
@@ -91,7 +91,7 @@ Example Codes:
   - multilocale.chpl to serve as a multi-locale execution tutorial
   - taskParallel.chpl to serve as an introduction to task-parallel concepts
   - varargs.chpl to demonstrate the user of variable argument functions
-- updated existing examples:
+- updated existing examples to reflect language changes:
   - added "new" keyword to tests that create class instances
   - for tests that use files, changed access mode from string to enum
   - added enumeration type qualifiers to uses of enumerated types
@@ -115,32 +115,29 @@ Compiler Flags:
 
 Generated Code Flags:
 ---------------------
-- added a config const "maxThreads" to limit the number of threads 
+- added a config const "maxThreads" to limit the number of threads per locale
   (see doc/README.threads for more information)
-- made GASNet executions support the --gdb flag
-- renamed some identifiers to avoid initial underscores -- more remain
-- changed integer type aliases to use stdint.h types
 - made --help flag list built-in config consts/vars (numLocales, maxThreads)
 - added a --quiet/-q flag to suppress runtime warnings
 
 Bug Fixes/New Semantic Checks (for old semantics):
 --------------------------------------------------
-- improved composability of forall expressions and coforall statements
-- fixed ability to specify C source files with paths
-- improved checks preventing the use of types in value contexts and vice-versa
-- fixed a bug in which standalone reads of sync vars did not consume full/empty
-  e.g., "myflag$;" is now equivalent to "myflag$.readFE();"
-- fixed the implementation of .length for degenerate ranges
-- fixed a bug with the --cpp-line flag for long generated C lines
-- removed incorrect copies that were inserted for certain default argument types
-- fixed several bugs in the implementation of associative/opaque domains/arrays
 - fixed support for arrays of arrays and arrays of syncs within classes
-- removed instantiation limit error messages generated by tuples
-- ensured user cannot allocate new locale instances
+- fixed several bugs in the implementation of associative/opaque domains/arrays
+- improved composability of forall expressions and coforall statements
+- improved checks preventing the use of types in value contexts and vice-versa
 - added checks for illegal control flow within parallel/sync/on statements
-- prevented user from being able to modify a locale's id
 - added warning if locale is applied to an expression known to be local
 - added a runtime warning when using distributions on more than 1 locale
+- removed incorrect copies that were inserted for certain default argument types
+- fixed ability to specify C source files with paths
+- fixed a bug in which standalone reads of sync vars did not consume full/empty
+  e.g., "myflag$;" is now equivalent to "myflag$.readFE();"
+- fixed a bug in the implementation of .length for degenerate ranges
+- ensured user cannot create new locales
+- prevented user from being able to modify a locale's id
+- removed instantiation limit error messages generated by tuples
+- fixed a bug with the --cpp-line flag for long generated C lines
 
 Error Message Improvements:
 ---------------------------
@@ -148,7 +145,7 @@ Error Message Improvements:
 
 Compiler Analysis and Optimizations/Performance of Generated Code:
 ------------------------------------------------------------------
-(none in this release)
+(no significant ones in this release)
 
 Compiler Performance and Cleanup:
 ---------------------------------
@@ -156,16 +153,18 @@ Compiler Performance and Cleanup:
 
 Generated Code:
 ---------------
+- changed implementation of subclasses
 - added support for remote references and remote classes
 - improved line number reporting for certain functions
-- turned up C compilation warning levels for developers
-- changed implementation of subclasses
+- renamed some identifiers to avoid initial underscores -- more remain
 - improved name mangling policy
+- changed integer type aliases to use stdint.h types
+- turned up C compilation warning levels for developers
 
 Testing System:
 ---------------
 - added support for listing any number of tests and directories on command-line
-- removed -onetest and -startdir flags
+- removed -onetest and -startdir flags due to above support
 - allowed start_test to be run from any directory
 - removed support for Makefile-driven testing
 - removed start_clean script
@@ -173,13 +172,13 @@ Testing System:
 
 Internal:
 ---------
-- improved unification/normalization of AST classes and primitives
-- removed unnecessary primitives, types, symbols
-- improved runtime TAGS file and added TAGS file for generated code
-- converted from CVS to SVN
 - unified implementation of cobegin/coforall to use begins
 - use endCounts to implement cobegins/coforalls rather than syncStacks
+- improved runtime TAGS file and added TAGS file for generated code
+- improved unification/normalization of AST classes and primitives
+- removed unnecessary primitives, types, symbols
 - changed places in code where pragmas can occur
+- converted from CVS to SVN
 - made --ccwarnings into --[no-]ccwarnings where the default is based on --devel
 
 
