--- a/spec/Functions.tex
+++ b/spec/Functions.tex
@@ -298,10 +298,11 @@ by out or inout intent, the lvalue that is returned by the function is
 assigned a value.
 
 Variable functions support an implicit argument \chpl{setter} of type
-bool.  If the variable function is called in a context such that the
-returned lvalue is assigned a value, the argument \chpl{setter}
-is \chpl{true}; otherwise it is \chpl{false}.  This argument is useful
-for controlling different behavior depending on the call site.
+bool that is a compile-time constant (and can thus be folded).  If the
+variable function is called in a context such that the returned lvalue
+is assigned a value, the argument \chpl{setter} is \chpl{true};
+otherwise it is \chpl{false}.  This argument is useful for controlling
+different behavior depending on the call site.
 
 \begin{example}
 The following code creates a function that can be interpreted as a
