Add param string functions to the spec.
Add +, ==, !=, <=, >=, <, >, ascii, length over parameter string operands to
the list of expressions that can result in parameters. 


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13858 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Variables.tex
+++ b/spec/Variables.tex
@@ -172,6 +172,8 @@ Parameter expressions are restricted to the following constructs:
 \item
  Applications of the binary operators \verb@+@, \verb@-@, \verb@*@, \verb@/@, \verb@%@, \verb@**@, \verb@&&@, \verb@||@, \verb@!@, \verb@&@, \verb@|@, \verb@^@, \verb@~@, \verb@<<@, \verb@>>@, \verb@==@, \verb@!=@, \verb@<=@, \verb@>=@, \verb@<@, and \verb@>@ on operands that are bool or integral parameter expressions.
 \item
+ Applications of the string concatenation operator \verb@+@, string comparison operators \verb@==@, \verb@!=@, \verb@<=@, \verb@>=@, \verb@<@, \verb@>@, and the string length and ascii functions on parameter string expressions.
+\item
  The conditional expression where the condition is a parameter and the
  then- and else-expressions are parameters.
 \item
