--- a/spec/Generics.tex
+++ b/spec/Generics.tex
@@ -186,9 +186,9 @@ A queried domain may not be modified via the name to which it is bound
 \index{generics!function visibility}
 
 Function visibility in generic functions is altered depending on the
-instantiation.  When resolving function calls made within visible
-functions, the visible functions are taken from any call site at which
-the function is instantiated for each particular instantiation.
+instantiation.  When resolving function calls made within generic functions,
+the visible functions are taken from any call site at which the generic
+function is instantiated for each particular instantiation.
 
 \subsection{Generic Types}
 \label{Generic_Types}
