Made opaque not be a reserved word
Made "opaque" more like "int" by having it not be a reserved
word.  Instead, added an "isOpaqueType" primitive that tests
whether a type is opaque.  Removed special cases for opaque
domains and indices from the parser and implemented them in the 
ChapelArray.chpl module instead via the isOpaqueType primitive.
Removed "opaque" from the chapel_listing.tex file used to build
the spec (it apparently already wasn't on the reserved words
list?)




git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14051 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/chapel_listing.tex
+++ b/spec/chapel_listing.tex
@@ -12,7 +12,7 @@
       label, let, locale,
       module,
       new, nil,
-      on, opaque, otherwise, out,
+      on, otherwise, out,
       param, pragma,
       range, real, record, reduce, return,
       scan, select, serial, single, sparse, string, subdomain, sync,
