updated point of instantiation discussion in spec
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14081 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Functions.tex
+++ b/spec/Functions.tex
@@ -433,7 +433,9 @@ in~\rsec{Determining_More_Specific_Functions}.
 
 A function is a visible function to a function call if the name of the
 function is the same as the name of the function call and the function
-is defined or used in a lexical outer scope.
+is defined or used in a lexical outer scope.  Function visibility in
+generic functions is discussed
+in~\rsec{Function_Visibility_in_Generic_Functions}.
 
 \subsubsection{Determining Candidate Functions}
 \label{Determining_Candidate_Functions}
