added support for eliding the identifier in a query expression
This allows the identifier to be omitted in after the ? in the
definition of a generic function as in

  def foo(r: range(?)) { }

This is important because otherwise there is no easy way to specify
that the generic type is of interest.

Updated the spec to allow eliding the identifier after ?'s.  Note that
this allows allows this omission anywhere so the following are
equivalent:

  def foo(x) { }
  def foo(x: ?t) { }
  def foo(x: ?) { }

Added a test case.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14086 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Expressions.tex
+++ b/spec/Expressions.tex
@@ -151,12 +151,18 @@ argument type expression.  The syntax of a query expression is given
 by:
 \begin{syntax}
 query-expression:
-  ? identifier
+  ? identifier[OPT]
 \end{syntax}
 Querying is restricted to querying the type of a formal argument, the
 element type of an formal argument that is an array, the domain of a
 formal argument that is an array, the size of a primitive type, or a
 type or parameter field of a formal argument type.
+
+The identifier can be omitted.  This is useful for ensuring the
+genericity of a generic type that defines default values for all of
+its generic fields when specifying a formal argument as discussed
+in~\rsec{Formal_Arguments_of_Generic_Type}.
+
 \begin{example}
 The following code defines a generic function where the type of the
 first parameter is queried and stored in the type alias \chpl{t} and
