--- a/spec/Generics.tex
+++ b/spec/Generics.tex
@@ -162,7 +162,8 @@ symbol \chpl{type} is equivalent to \chpl{s.itemType}.
 
 Note that generic types which have default values for all of their
 generic fields, \emph{e.g. range}, are not generic when simply
-specified and require a query to mark the argument as generic.
+specified and require a query to mark the argument as generic.  For
+simplicity, the identifier may be omitted.
 
 \index{integral@\chpl{integral}}
 \index{numeric@\chpl{numeric}}
