added support for user-defined classes for generic classes
In such a constructor, formals must be specified for each generic
field in the generic class unless the generic field is defined to have
a default value.  These are matched up and set by name.  If some
generic fields are not listed in the constructor, an error is flagged.

Fixed a .good error and removed the oldest future:
  reductions/bradc/manual/threeclasstypes-construct.future

Added two test cases for generic user-defined constructor and removed
a future for a test that now works.

Updated the spec.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14176 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Classes.tex
+++ b/spec/Classes.tex
@@ -245,7 +245,10 @@ A class constructor is defined by declaring a method with the same
 name as the class.  The constructor is used to create instances of the
 class and must be called by preceding a call to it with the \chpl{new}
 keyword.  When the constructor is called, memory is allocated to store
-a class instance.
+a class instance.  Formals for every generic field must be specified
+in the constructor unless that generic field has a default specified
+in the field declaration.  When instantiated, the generic fields are
+matched up by name.
 
 \subsubsection{The Default Constructor}
 \label{The_Default_Constructor}
@@ -255,7 +258,7 @@ Chapel program that does not define any constructors.  This
 constructor is defined such that it has one argument for every field
 in the class.  Each of the non-generic fields has a default value.
 Actual values for each generic field must be passed to a constructor
-call.
+call if no default is specified.
 
 \begin{example}
 Given the class
