Adding a parallel "hello world" example
Have had it in mind to add this since the last release,
and find myself wanting it to test out ARMCI/MPI.  It's
a little bit duplicative of multilocale.chpl, but with
a different intent -- a trivial program that tests
multiple locales rather than a tutorial on multilocale
features.  When we refactor the examples into
subdirectories, I picture something like:

  examples/
    hello/
      hello.chpl
      hello-multiloc.chpl
      ...
    tutorials/
      multilocale.chpl
      ...
    benchmarks/  -- or some other name?
      hpcc/
        ...



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@14194 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -7,6 +7,7 @@ get started with Chapel program structure:
 
      hello.chpl             : simplest Chapel "Hello, world!" program
      hello-module.chpl      : a variation using a more structured use of Chapel
+     hello-multiloc.chpl    : a multi-locale "Hello, world!" program
 
 It also contains a number of more interesting examples that
 demonstrate various Chapel features:
