--- a/spec/Classes.tex
+++ b/spec/Classes.tex
@@ -363,7 +363,9 @@ dispatch in the event that a variable that has the base class type
 references a variable that has the derived class type.
 
 The identical signature requires that the names, types, and order of
-the formal arguments be identical.
+the formal arguments be identical. The return type of the overriding
+method must be the same as the return type of the base class's method,
+or must be a subclass of the base class method's return type.
 
 Methods without parentheses are not candidates for dynamic dispatch.
 \begin{rationale}
